# Enabling-Binary-Neural-Network-Training-on-the-Edge

./: .gitignore  LICENSE  README.md
cpp_bnn/lib/integration_test/: opt_vanilla_multilayer_perceptron.cpp  opt_xnor_multilayer_perceptron.cpp  ovw_vanilla_naive_layer_test.cpp  xnor_multilayer_perceptron.cpp
cpp_bnn/lib/library_test_code/: blas_main.cpp  eigen_main.cpp
cpp_bnn/lib/library_test_code/test_exe/: test_armadillo_O3  test_blas_Ofast  test_neon_simd_O2  test_vector_Ofast
cpp_bnn/lib/misc/: initializers.h
cpp_bnn/lib/misc/grad_quan_new/: gradient_quantisation_utils.h
cpp_bnn/lib/pybind/: .rendered.ex5.cpp  CMakeLists.txt  ex5.cpp  ex5_main.cpp
cpp_bnn/lib/tests/: test_1.csv  test_blas  test_conv_utils_ovw.cpp  test_optimized_mattrix_operations.cpp
cpp_bnn/lib/tests/tests_exe/: test_initialiser
cpp_bnn/lib/utils/: base_layer.h  data_type.h  initialiser.h  test_buffers.cpp
energy_estimation/: README.md  example_get_energy_resnetE.py  example_get_energy_small.py  qenergy.py
memory_estimation/: memory_estimation.xlsx
python_bnn/core/keras_models/keras_full_precision_model/: binary_tf_model.py
python_bnn/core/numpy_models/binary_models/: binarization_utils.py  layers.py
python_bnn/core/numpy_models/full_precision_models/: activation_layers.py
python_bnn/core/numpy_models/xnor_models/: bit_packed_layers.py  gradient_quantization_utils.py
python_bnn/core/test/utils/: test_conv_utils.py
python_bnn/models_from_papers/: MLP_MNIST_Numpy.ipynb
rpi_prototype/cpp_bnn/: README.md
rpi_prototype/cpp_bnn/lib/integration_test/: model_signatures.h  opt_vanilla_BinaryNet.cpp  opt_vanilla_naive_layer_test.cpp  opt_xnor_BinaryNet.cpp  opt_xnor_naive_layer_test.cpp  ovw1d_vanilla_multilayer_perceptron.cpp  ovw1d_xnor_multilayer_perceptron.cpp  ovw_vanilla_multilayer_perceptron.cpp  ovw_xnor_multilayer_perceptron.cpp  ovw_xnor_naive_layer_test.cpp  po2_ovw_xnor_naive_layer_test.cpp  po2_xnor_multilayer_perceptron.cpp  vanilla_binarynet.cpp  vanilla_convnet.cpp  vanilla_multilayer_perceptron.cpp  vanilla_naive_layer_test.cpp  xnor_binarynet.cpp  xnor_convnet.cpp  xnor_naive_layer_test.cpp
rpi_prototype/cpp_bnn/lib/library_test_code/: arma_main.cpp  boost_main.cpp  makefile_library_test_code  neon_main.cpp  vector_main.cpp
rpi_prototype/cpp_bnn/lib/misc/: batch_norm.h  bit_utils.cpp  bit_utils.h  cpp_profile_main.cpp  cpp_profile_mat_1024.cpp  cpp_profile_mat_2048.cpp  cpp_profile_mat_test.cpp  data_types.h  dense.cpp  dense.h  gradient_quantisation.cpp  gradient_quantisation.h  initializers.cpp
rpi_prototype/python_bnn/: README.md  unit_test.ipynb
rpi_prototype/python_bnn/core/: base_layers.py  initializers.py  label_utils.py  losses.py  model.py  optimizers.py
rpi_prototype/python_bnn/memory_profiler/: binary_net.py  keras_models.py  numpy_models.py  test_np_op.py
rpi_prototype/python_bnn/models_from_papers/: MLP_MNIST_KERAS.ipynb  MLP_MNIST_pipeline.py  binary_net_training_pipeline.py  mlp_dataset_to_csv.ipynb
training_emulation_on_gpu/: README.md  binarization_utils.py  env.txt
training_emulation_on_gpu/MNIST-CIFAR-SVHN/: Binary.py
training_software/: binarization_utils.py
training_software/MNIST-CIFAR-SVHN/: Binary.py
(+328 files in other folders)
